[package]
name = "bus9"
version = "1.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
mime_guess = "2.0.5"
parking_lot = "0.12.5"
rust-embed = "8.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full", "signal"] }
futures-util = "0.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
