[package]
name = "bench"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3.31"
indicatif = "0.18.3"
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
url = "2.5.7"
